[gd_scene load_steps=2 format=2]

[ext_resource path="res://cenas/atv2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 33.0
margin_top = 22.0
margin_right = 330.0
margin_bottom = 132.0
color = Color( 0.223529, 0.215686, 0.25098, 1 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 101.0
text = "2-Crie uma lista vázia, preencha com os dados enviados pelo usuário e mostre na tela"
align = 1
valign = 1
autowrap = true

[node name="proximaetapa2" type="Button" parent="."]
margin_left = 771.0
margin_top = 506.0
margin_right = 1000.0
margin_bottom = 585.0
text = "Pressione para proximo exercicio!"
icon_align = 1

[node name="numlista" type="LineEdit" parent="."]
margin_left = 282.0
margin_top = 272.0
margin_right = 392.0
margin_bottom = 346.0

[node name="Label" type="Label" parent="."]
margin_left = 47.0
margin_top = 192.0
margin_right = 220.0
margin_bottom = 271.0
text = "Insira um numero e pressione o botão. Repita com todos os numeros de sua lista."
align = 1
valign = 1
autowrap = true

[node name="seta" type="Polygon2D" parent="."]
color = Color( 0.25098, 0.243137, 0.282353, 1 )
polygon = PoolVector2Array( 173, 284, 217, 301, 209, 317, 251, 306, 250, 303, 236, 271, 229, 280, 189, 261 )

[node name="botlista" type="Button" parent="."]
margin_left = 426.0
margin_top = 264.0
margin_right = 633.0
margin_bottom = 351.0
text = "Botão Lista"
icon_align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 147.0
margin_top = 428.0
margin_right = 533.0
margin_bottom = 557.0
color = Color( 0.223529, 0.215686, 0.25098, 1 )

[node name="listaprint2" type="Label" parent="ColorRect"]
margin_left = 22.0
margin_top = 12.0
margin_right = 369.0
margin_bottom = 116.0
align = 1
valign = 1

[connection signal="pressed" from="proximaetapa2" to="." method="_on_proximaetapa2_pressed"]
[connection signal="pressed" from="botlista" to="." method="_on_botlista_pressed"]
